--- a/MVCHtmlHelper/Content/Site.css
+++ b/MVCHtmlHelper/Content/Site.css
@@ -16,9 +16,15 @@
     white-space: normal;
 }
 
+.row{
+    margin-bottom :15px;
+    margin-top : 10px;
+
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-    max-width: 280px;
+   
 }
